--- a/index.html
+++ b/index.html
@@ -2,3 +2,6 @@ Lorem ipsum, dolor sit amet consectetur adipisicing elit. Perferendis eum doloru
 
 
 modified html modified htmlll
+
+
+This line in Project1 will cause conflict”
